--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Covid 19 Tracker(Unofficial Tracker) get all the necessary information. Stay home Stay Safe!"
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Covid 19 Tracker</title>
 
     <style>
       *,
